--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,6 @@
 @import "style.css";
+@import "images.css";
+@import "menu.css";
 @media(max-width: 800px) {
     .main-container {
         display: grid;
